<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.michaeljeffress.project3.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/editText_Main_Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:hint="@string/search" />

    <EditText
        android:id="@+id/editText_Main_Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Main_Search"
        android:layout_centerHorizontal="true"
        android:hint="@string/location" />

    <LinearLayout
        android:id="@+id/titleBlock_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_Main_Location"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingLeft="12dp">

        <TextView
            android:id="@+id/textView_Place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView_Loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:paddingRight="10dp"
            android:text="@string/loc"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView_Type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:paddingRight="10dp"
            android:text="@string/type"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView_Hotness2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/hotness"
            android:textSize="15dp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView_Main_List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleBlock_Main"
        android:layout_above="@+id/yelpLogo">

    </ListView>

    <ImageView
        android:id="@+id/yelpLogo"
        android:src="@drawable/yelp_powered_btn_dark_2x"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/openWeatherActivity_button"
        android:layout_centerVertical="true"
        android:text="Weather Button"
        android:layout_alignEnd="@+id/listView_Main_List" />

</RelativeLayout>
